<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.luminis</groupId>
  <artifactId>httpjca</artifactId>
  <packaging>jar</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <url>http://repository.jboss.org</url>
  <properties>
    <version.shrinkwrap.resolvers>2.0.0-alpha-1</version.shrinkwrap.resolvers>
  </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>1.1.4.Final</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
  <dependencies>
      <dependency>
          <groupId>org.jboss.spec.javax.resource</groupId>
          <artifactId>jboss-connector-api_1.6_spec</artifactId>
          <version>1.0.1.Final-redhat-2</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.spec.javax.transaction</groupId>
          <artifactId>jboss-transaction-api_1.2_spec</artifactId>
          <version>1.0.0.Final</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>javax.validation</groupId>
          <artifactId>validation-api</artifactId>
          <version>1.0.0.GA</version>
      </dependency>
      <dependency>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
          <version>4.4</version>
      </dependency>

      <!-- Test dependencies -->
      <!-- Arquillian test dependecies -->
      <dependency>
          <groupId>org.jboss.arquillian.junit</groupId>
          <artifactId>arquillian-junit-container</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-api</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-spi</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-api-maven</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-spi-maven</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.shrinkwrap.resolver</groupId>
          <artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.wildfly</groupId>
          <artifactId>wildfly-arquillian-container-embedded</artifactId>
          <version>8.1.0.Final</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.wildfly</groupId>
          <artifactId>wildfly-embedded</artifactId>
          <version>8.1.0.Final</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.11</version>
          <scope>test</scope>
      </dependency>
  </dependencies>
  
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <excludes>
            <exclude>**/META-INF/*</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-rar-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>package</id>
            <goals>
              <goal>rar</goal>
            </goals>
            <configuration>
              
            </configuration>
          </execution>
        </executions>
      </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>2.8</version>
            <executions>
                <execution>
                    <id>unpack</id>
                    <phase>process-test-classes</phase>
                    <goals>
                        <goal>unpack</goal>
                    </goals>
                    <configuration>
                        <artifactItems>
                            <artifactItem>
                                <groupId>org.wildfly</groupId>
                                <artifactId>wildfly-dist</artifactId>
                                <version>8.1.0.Final</version>
                                <type>zip</type>
                                <overWrite>false</overWrite>
                                <outputDirectory>target</outputDirectory>
                            </artifactItem>
                        </artifactItems>
                    </configuration>
                </execution>
            </executions>
        </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.17</version>
          <configuration>
          <!-- Fork every test because it will launch a separate AS instance -->
          <forkMode>always</forkMode>
          <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
              <!-- the maven dependency plugin will have already downloaded the server on /target -->
              <jboss.home>${project.basedir}/target/wildfly-8.1.0.Final</jboss.home>
              <module.path>${project.basedir}/target/wildfly-8.1.0.Final/modules</module.path>
              <javaVmArguments>-Xmx512m -XX:MaxPermSize=128m</javaVmArguments>
              <arq.container.jboss.configuration.managementHost>${wildfly.host}</arq.container.jboss.configuration.managementHost>
              <arq.container.jboss.configuration.managementPort>29990</arq.container.jboss.configuration.managementPort>
              <jboss.socket.binding.port-offset>20000</jboss.socket.binding.port-offset>
              <jboss.bind.address>${wildfly.host}</jboss.bind.address>
              <jboss.bind.address.management>${wildfly.host}</jboss.bind.address.management>
          </systemPropertyVariables>
          <redirectTestOutputToFile>false</redirectTestOutputToFile>
          </configuration>
      </plugin>
    </plugins>
  </build>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <wildfly.host>localhost</wildfly.host>
            </properties>
        </profile>
        <profile>
            <id>jenkins</id>
            <properties>
                <!-- The internal IP address on the OpenShift Jenkins instance. -->
                <wildfly.host>${env.OPENSHIFT_JENKINS_IP}</wildfly.host>
            </properties>
        </profile>
    </profiles>
    
  <repositories>
    <repository>
      <id>jboss</id>
      <url>http://repository.jboss.org/nexus/content/groups/public</url>
    </repository>
    <repository>
      <id>snapshots</id>
      <url>http://repository.jboss.org/nexus/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>fungal</id>
      <url>http://jesperpedersen.github.com/fungal/maven2</url>
    </repository>
  </repositories>

</project>
